Fix shopping cart overflow

--- a/src/components/ShoppingCart/ShoppingCart.scss
+++ b/src/components/ShoppingCart/ShoppingCart.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: scroll;
   padding: 30px;
   position: fixed;
   right: 0;
